<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Gallows</string>
    <string name="empty"></string>
    <string name="reveal_answer">Answer</string>


    <string name="guess_button">Guess</string>
    <string name="new_button">New Game</string>
    <string name="enter_hint">Enter character</string>
    <string name="question_marks">-??????-</string>
    <string name="guesses_used">Incorrect guesses remaining:  </string>
    <string name="lose_alert_title">You\'ve killed him!</string>
    <string name="lose_alert_message">The correct answer was </string>
    <string name="alert_message">Press OK to start a new game</string>
    <string name="win_alert_title">You\'ve saved him from the gallows!</string>
    <string name="reveal_answer_title">The answer is..</string>

    <string-array name="dictionary"><item>garden</item>
        <item>floor</item>
        <item>technology</item>
        <item>style</item>
        <item>feeling</item>
        <item>science</item>
        <item>relate</item>
        <item>doubt</item>
        <item>horse</item>
        <item>answer</item>
        <item>compare</item>
        <item>suffer</item>
        <item>announce</item>
        <item>forward</item>
        <item>user</item>
        <item>fund</item>
        <item>character</item>
        <item>risk</item>
        <item>normal</item>
        <item>myself</item>
        <item>nor</item>
        <item>dog</item>
        <item>obtain</item>
        <item>quickly</item>
        <item>army</item>
        <item>indicate</item>
        <item>forget</item>
        <item>station</item>
        <item>glass</item>
        <item>cup</item>
        <item>previous</item>
        <item>husband</item>
        <item>recently</item>
        <item>publish</item>
        <item>anyway</item>
        <item>serious</item>
        <item>visit</item>
        <item>capital</item>
        <item>note</item>
        <item>season</item>
        <item>argument</item>
        <item>listen</item>
        <item>responsibility</item>
        <item>significant</item>
        <item>prime</item>
        <item>economy</item>
        <item>element</item>
        <item>finish</item>
        <item>duty</item>
        <item>fight</item>
        <item>train</item>
        <item>maintain</item>
        <item>attempt</item>
        <item>leg</item>
        <item>investment</item>
        <item>save</item>
        <item>throughout</item>
        <item>suddenly</item>
        <item>brother</item>
        <item>improve</item>
        <item>avoid</item>
        <item>wonder</item>
        <item>tend</item>
        <item>title</item>
        <item>hotel</item>
        <item>aspect</item>
        <item>industrial</item>
        <item>express</item>
        <item>summer</item>
        <item>determine</item>
        <item>generally</item>
        <item>daughter</item>
        <item>exist</item>
        <item>used</item>
        <item>baby</item>
        <item>nearly</item>
        <item>smile</item>
        <item>sorry</item>
        <item>sea</item>
        <item>skill</item>
        <item>treat</item>
        <item>remove</item>
        <item>concern</item>
        <item>university</item>
        <item>left</item>
        <item>dead</item>
        <item>discussion</item>
        <item>specific</item>
        <item>box</item>
        <item>customer</item>
        <item>outside</item>
        <item>conference</item>
        <item>total</item>
        <item>profit</item>
        <item>division</item>
        <item>throw</item>
        <item>procedure</item>
        <item>fill</item>
        <item>king</item>
        <item>assume</item>
        <item>image</item>
        <item>oil</item>
        <item>obviously</item>
        <item>unless</item>
        <item>appropriate</item>
        <item>circumstance</item>
        <item>military</item>
        <item>proposal</item>
        <item>mention</item>
        <item>client</item>
        <item>sector</item>
        <item>admit</item>
        <item>direction</item>
        <item>replace</item>
        <item>basic</item>
        <item>instance</item>
        <item>sign</item>
        <item>original</item>
        <item>successful</item>
        <item>okay</item>
        <item>aware</item>
        <item>reflect</item>
        <item>measure</item>
        <item>attitude</item>
        <item>yourself</item>
        <item>disease</item>
        <item>exactly</item>
        <item>commission</item>
        <item>intend</item>
        <item>beyond</item>
        <item>seat</item>
        <item>president</item>
        <item>encourage</item>
        <item>addition</item>
        <item>goal</item>
        <item>miss</item>
        <item>popular</item>
        <item>affair</item>
        <item>technique</item>
        <item>respect</item>
        <item>drop</item>
        <item>professional</item>
        <item>item</item>
        <item>fly</item>
        <item>reveal</item>
        <item>version</item>
        <item>maybe</item>
        <item>ability</item>
        <item>operate</item>
        <item>campaign</item>
        <item>heavy</item>
        <item>advice</item>
        <item>institution</item>
        <item>discover</item>
        <item>surface</item>
        <item>library</item>
        <item>pupil</item>
        <item>refuse</item>
        <item>prevent</item>
        <item>advantage</item>
    </string-array>

</resources>
