<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:id="@+id/hangmanImageView"
        android:src="@drawable/hangman6"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/used"
        android:layout_alignEnd="@+id/used"
        android:contentDescription="Hanging Man!" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/question_marks"
        android:id="@+id/answerText"
        android:layout_marginBottom="79dp"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/hangmanImageView"
        android:layout_toRightOf="@+id/guessesUsed"
        android:layout_toEndOf="@+id/guessesUsed" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guessField"
        android:inputType="text"
        android:hint="@string/enter_hint"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/guessesUsed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_button"
        android:id="@+id/guessButton"
        android:layout_alignBottom="@+id/guessField"
        android:layout_toLeftOf="@+id/newGameButton"
        android:layout_toStartOf="@+id/newGameButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_button"
        android:id="@+id/newGameButton"
        android:layout_alignTop="@+id/guessButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/guesses_used"
        android:id="@+id/guessesUsed"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/empty"
        android:id="@+id/used"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/guessesUsed"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
